app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-backend
  template:
    metadata:
      labels:
        app: app-backend
    spec:
      containers:
        - name: app-backend
          image: 373804767529.dkr.ecr.ap-northeast-2.amazonaws.com/mypeccy-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
